@@ -1,4 +1,5 @@
 Changes towards version 0.4:
+- Corrected number for combat energy when outfitting starship. - SvdB
 - Added dumping planet info to uqmdebug.c - SvdB
 - Check language.txt for locale, from Zap
 - Make it possible to specify the config dir on the command line.
